Details
-
Bug
-
Resolution: Done
-
P0: Blocker
-
6.2.0 FF
-
None
-
-
7f3646ea04f76a85e44eff5ae7c97678666204aa (qt/qtconnectivity/dev)
Description
Build target fails with:
agent:2021/05/17 17:59:47 build.go:391: -- Performing Test WinRT Bluetooth API agent:2021/05/17 17:59:54 build.go:391: -- Performing Test WinRT Bluetooth API - Success agent:2021/05/17 17:59:54 build.go:391: CMake Error at src/bluetooth/CMakeLists.txt:66 (list): agent:2021/05/17 17:59:54 build.go:391: list index: 2 out of range (-1, 0) agent:2021/05/17 17:59:54 build.go:391: -- Running syncqt for module: 'QtNfc' agent:2021/05/17 17:59:55 build.go:391: -- The following packages have been found:
Details in https://testresults.qt.io/coin/integration/qt/qt5/tasks/1621273335
Attachments
Issue Links
- is required for
-
QTQAINFRA-4452 Windows 10 ARM has Insignificant flag
-
- Closed
-