windows: Remove legacy "limited service discovery" mode

With older Windows version (<1607 aka 14393) there was only limited
service discovery available via Windows API. As Qt now needs at least
1809 aka 17763 it is safe to remove that additional code now.

As a side effect we unbreak the arm64 build. The configure check for the
Windows SDK version broke here, because CMAKE_SYSTEM_VERSION is only
"10" for these configurations while it is "10.0.XYZ" for desktop builds.

Fixes: QTBUG-93820
Change-Id: Ib72f2e3119eb1de858eb7d6aeb7eb32f3028813b
Reviewed-by: Alex Blasche <alexander.blasche@qt.io>
Reviewed-by: Andreas Buhr <andreas.buhr@qt.io>